fix: Make landing div background visible
By inlining css I changed the relative path to the background image for the landing div.  Fixed.

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -5,6 +5,7 @@
 #landing {
   height: 100vh;
   width: 100%;
+  background: url("img/welcome.jpg");
   background: url("../img/welcome.jpg");
   background-position: center;
   background-size: cover;
